# circular-buffer-visualizer

./: CMakeLists.txt  Makefile
.github/workflows/: build-win64.yml
pixi/: index.html  package-lock.json  package.json
pixi/src/: app.ts  config.ts  data.ts  grid.ts  main.ts  plot.ts  slider.ts  style.css  types.ts  utils.ts
pixi7-react/: package-lock.json  package.json  tsconfig.app.json
pixi7-react/src/: index.css  main.tsx
pixi7-react/src/components/: app.tsx  stage.tsx
pixi7-react/src/components/dynamics/: controls.tsx  dynamics.tsx  index.ts  slider.tsx
pixi7-react/src/components/knob/: config.ts  graphics.tsx  index.ts  knob.tsx  label.tsx
pixi7-react/src/components/settings/: background.tsx  config.ts  knobs.tsx  settings.tsx
pixi7-react/src/components/visualiser/: grid.tsx  index.ts  labels.tsx  plot.tsx  visualiser.tsx
pixi7-react/src/hooks/: use-drag.ts  use-juce-slider.ts
pixi7-react/src/types/: global.ts
pixi7-react/src/utils/: fetch-levels.ts
src/: Clipper.h  Frontend.cpp  Frontend.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/ui/: index.css  index.html  index.js
vite-pixi/: package-lock.json  package.json
vite-pixi/src/: app.tsx  index.css  stage.tsx
vite-pixi/src/types/: global.ts
